--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@
         background: #2c3e50;
         color: white;
     }
-    ul {
+    ul . {
         display: flex;
         text-align: center;
     }
@@ -165,6 +165,9 @@
         /*    background: #DAF7A6;*/
         padding: 20px;
     }
+
+    /* ZONING - COMPLET */
+
          /* premier zoning - commencer*/
 
     .zone{
@@ -425,9 +428,23 @@ width: 50%;
 }
    /* sixième zoning - fin*/
 
+   /* LISTE  */
+.list {
+    list-style-type: none;
+}
+
+ol li {
+    list-style-type: decimal;
+}
+.list i {
+    margin-left: 15px;
+    color: blue;
+}
+
     footer {
         background: #2980b9;
         height: 30px;
         text-align: right;
         padding: 5px 10px;
     }
+ 
